--- a/.github/workflows/daily-contribution.yml
+++ b/.github/workflows/daily-contribution.yml
@@ -3,7 +3,7 @@ name: mutpeet project 1
 # Schedule: runs at 00:05 UTC every day
 on:
   schedule:
-    - cron: '5 0 * * *'
+  - cron: '*/5 * * * *'
   # Also allow manual trigger if needed\ n  workflow_dispatch: {}
 
 jobs:
