--- a/.github/workflows/daily-contribution.yml
+++ b/.github/workflows/daily-contribution.yml
@@ -2,8 +2,8 @@ name: mutpeet project 1
 
 # Schedule: runs at 00:05 UTC every day
 on:
-  schedule:
-  - cron: '*/5 * * * *'
+    schedule:
+      - cron: '5 0 * * *' 
   # Also allow manual trigger if needed\ n  workflow_dispatch: {}
 
 jobs:
